// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a person when it is loaded and the person does not exist 1`] = `
Object {
  "1": Object {
    "id": "1",
  },
  "2": Object {
    "first_name": "Fname",
    "id": "2",
    "last_name": "Lname",
  },
  "3": Object {
    "id": "3",
  },
  "4": Object {
    "first_name": "Test Person",
    "id": "4",
  },
}
`;

exports[`should delete a person  1`] = `
Object {
  "1": Object {
    "id": "1",
  },
  "3": Object {
    "id": "3",
  },
}
`;

exports[`should replace a person when it is loaded with more includes 1`] = `
Object {
  "1": Object {
    "id": "1",
  },
  "2": Object {
    "first_name": "Test Person",
    "id": "2",
  },
  "3": Object {
    "id": "3",
  },
}
`;

exports[`should update attributes of a person  1`] = `
Object {
  "1": Object {
    "id": "1",
  },
  "2": Object {
    "first_name": "Test Person",
    "id": "2",
    "last_name": "Lname",
  },
  "3": Object {
    "id": "3",
  },
}
`;
